<resources>
    <string name="app_name">Roberto Ruiz App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="regístrate">Regístrate</string>
    <string name="fundacion">Fundación Roberto Ruíz Obregón</string>
    <string name="requerido">Requerido</string>
    <string name="sexo">Sexo</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="edad">Edad</string>
    <string name="codigo_postal">Código postal</string>
    <string name="name">Name</string>
    <string name="datos_de_contacto">Datos de contacto</string>
    <string name="confirmar_contraseña">Confirmar contraseña</string>
    <string name="logo">Logo</string>
    <string name="contraseña">Contraseña</string>
    <string name="ocupacion">Ocupación</string>
    <string name="nivel_educativo">Nivel educativo</string>
    <string name="registrarse">Registrarse</string>
    <string name="Age">Edad</string>
    <string name="nivel_Educativo">Nivel educativo</string>
    <string name="correo_electronico">Correo</string>
    <string name="registro">Registro</string>
    <string name="eDad">Edad</string>
    <string name="this_is_first_activity">This is first Activity</string>
    <string name="start_another_activity">Start Another Activity</string>
    <string name="nivel_EducAtivo">Nivel educativo</string>
    <string name="intereses">Intereses</string>
    <string name="foto_perfil">Foto de Perfil</string>

    <string-array name = "generos">
        <item>Selecciona tu género</item>
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Otro</item>
    </string-array>

    <string-array name="intereses">
        <item>Seleccione uno o más intereses</item>
        <item>Interés 1</item>
        <item>Interés 2</item>
        <item>Interés 3</item>
        <item>Interés 4</item>
    </string-array>

    <string name="bienvenida">¡Bienvenido</string>
    <string name="nombreUsuario">Carlos!</string>
    <string name="misCursos">Mis Cursos</string>
    <string name="redesSociales">Nuestras redes sociales</string>
    <string name="contacto">Contacto</string>
    <string name="correo">robregon@gmail.com</string>
    <string name="telefono">4425014968</string>
    <string name="volver_al_inicio_de_sesi_n">Volver al inicio de sesión</string>
    <string name="Lorem">Lorem ipsum dolor sit amet. Est quia consequatur ut culpa natus sed consequuntur veritatis et quia dolorem ea eaque tempore. In consequatur neque 33 saepe consequuntur ut nulla vitae ea magni nostrum ex incidunt aperiam non culpa exercitationem et quos commodi.</string>
    <string name="whatsapp_icon">WhatsApp Icon</string>
    <string name="inicio">Inicio</string>
    <string name="cursos">Cursos</string>
    <string name="programas">Programas</string>
    <string name="becas">Becas</string>
    <string name="certificaciones">Certificaciones</string>
    <string name="back_button_description">Atrás</string>

</resources>